--- a/src/synology-server.html
+++ b/src/synology-server.html
@@ -451,11 +451,10 @@
                                                 <li>
                                                     <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
                                                     <ul>
-                                                        <li>DS216play</li>
-                                                        <li>DS416</li>
-                                                        <li>DS715</li>
-                                                        <li>DS1515</li>
-                                                        <li>DS2015xs</li>
+                                                        <li><b>armada375: </b>DS115, DS215j</li>
+                                                        <li><b>armada38x: </b>DS419slim, DS218j, RS217, DS116, DS216j, DS216, DS416j, DS416slim, RS816</li>
+                                                        <li><b>comcerto2k: </b>DS414j</li>
+                                                        <li><b>monaco: </b>DS216play</li>
                                                     </ul>
                                                 </li>
                                                 <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
@@ -478,11 +477,10 @@
                                         <li>
                                             <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
                                             <ul>
-                                                <li>DS216play</li>
-                                                <li>DS416</li>
-                                                <li>DS715</li>
-                                                <li>DS1515</li>
-                                                <li>DS2015xs</li>
+                                                <li><b>armada375: </b>DS115, DS215j</li>
+                                                <li><b>armada38x: </b>DS419slim, DS218j, RS217, DS116, DS216j, DS216, DS416j, DS416slim, RS816</li>
+                                                <li><b>comcerto2k: </b>DS414j</li>
+                                                <li><b>monaco: </b>DS216play</li>
                                             </ul>
                                         </li>
                                         <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
