--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -440,16 +440,22 @@
 
                                 <p>First, make sure your FreeBSD system is <b>configured for latest packages</b>.</p>
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install mono libass fontconfig freetype2 fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6</code></div>
+                                <div><code>sudo pkg install mono6.8 libass fontconfig freetype2 fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6</code></div>
                                 <br />
-                                <div><b>Install Emby Server on FreeBSD 11.2:</b></div>
-                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd11_{version}_amd64.txz">pkg add -f {url}</code></div>
+                                <div><b>Install Emby Server on FreeBSD 13:</b></div>
+                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd13_{version}_amd64.pkg">pkg add -f {url}</code></div>
                                 <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
                                 <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
 
                                 <br />
                                 <div><b>Install Emby Server on FreeBSD 12:</b></div>
-                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd12_{version}_amd64.txz">pkg add -f {url}</code></div>
+                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd12_{version}_amd64.pkg">pkg add -f {url}</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
+                                <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
+
+                                <br />
+                                <div><b>Install Emby Server on FreeBSD 11.2:</b></div>
+                                <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd11_{version}_amd64.pkg">pkg add -f {url}</code></div>
                                 <div style="margin:.5em 0;"><code style="white-space:nowrap;">sysrc emby_server_enable="YES"</code></div>
                                 <div style="margin:.5em 0;"><code style="white-space:nowrap;">service emby-server start</code></div>
 
