--- a/src/emby-theater-linux.html
+++ b/src/emby-theater-linux.html
@@ -420,33 +420,59 @@
 
                                     <h2>What you want to watch – right up front</h2>
                                     <p>Designed with with typical usage in mind, you won’t have to go hunting through your library to find the content you are most likely wanting to watch right now. The home screen shows you the items you were watching but hadn’t finished, your latest un-watched movies, the next episode of all your current TV shows and what’s on Live TV right now.</p>
-                                    <div>
+                                    <p>
                                         <img style="max-width:33%;" src="resources/1.png">
                                         <img style="max-width:33%;" src="resources/1.png">
                                         <img style="max-width:33%;" src="resources/1.png">
+                                    </p>
+
+                                    <div style="margin-bottom:2em;">
+                                        <h2>Installation</h2>
+                                        <ul style="margin:.5em 0 1em 2em;">
+                                            <li><a href="#deb">Debian</a></li>
+                                            <li><a href="#flatpak">Flatpak</a></li>
+                                            <li><a href="#deb">Linux Mint</a></li>
+                                            <li><a href="#snap">Snap</a></li>
+                                            <li><a href="#deb">Ubuntu</a></li>
+                                        </ul>
                                     </div>
 
-                                    <h2>Installation</h2>
-                                    <div>
-                                        <a href="#deb">Debian</a>
+                                    <div style="margin-bottom:3em;">
+                                        <h2><a style="color:inherit;" name="deb">Debian / Ubuntu / Linux Mint</a></h2>
+                                        <div>Download one of the following packages based on your system architecture:</div>
+                                        <ul style="margin:.5em 0 1em 2em;">
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_amd64.deb" title="Emby Theater for X64">X64</a></li>
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_arm64.deb" title="Emby Theater for Arm64 (aarch64)">Arm64 (aarch64)</a></li>
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_armhf.deb" title="Emby Theater for Armv7 (armhf)">Armv7 (armhf)</a></li>
+                                        </ul>
+                                        <div>Install Steps</div>
+                                        <div><code>sudo apt-get update</code></div>
+                                        <div><code>sudo apt-get install cec-utils libasound2 libatomic1 libc6 libegl1 libgcc-s1 libpulse0 libstdc++6</code></div>
+                                        <div><code>sudo dpkg -i /path/to/deb</code></div>
+                                        <div style="margin-top:1em;">Run Emby Theater</div>
+                                        <div><code>emby-theater</code></div>
                                     </div>
-                                    <div>
-                                        <a href="#deb">Linux Mint</a>
+
+                                    <div style="margin-bottom:3em;">
+                                        <h2><a style="color:inherit;" name="flatpak">Flatpak</a></h2>
+                                        <div>Download one of the following packages based on your system architecture:</div>
+                                        <ul style="margin:.5em 0 1em 2em;">
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-flatpak_3.0.15_x86_64.flatpak" title="Emby Theater for X64">X64</a></li>
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-flatpak_3.0.15_aarch64.flatpak" title="Emby Theater for Arm64 (aarch64)">Arm64 (aarch64)</a></li>
+                                        </ul>
+                                        <div>Install Steps</div>
                                     </div>
-                                    <div>
-                                        <a href="#deb">Ubuntu</a>
+
+                                    <div style="margin-bottom:3em;">
+                                        <h2><a style="color:inherit;" name="snap">Snap</a></h2>
+                                        <div>Download one of the following packages based on your system architecture:</div>
+                                        <ul style="margin:.5em 0 1em 2em;">
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-snap_3.0.15_amd64.snap" title="Emby Theater for X64">X64</a></li>
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-snap_3.0.15_arm64.snap" title="Emby Theater for Arm64 (aarch64)">Arm64 (aarch64)</a></li>
+                                            <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-snap_3.0.15_armhf.snap" title="Emby Theater for Armv7 (armhf)">Armv7 (armhf)</a></li>
+                                        </ul>
+                                        <div>Install Steps</div>
                                     </div>
-                                    <h2><a style="color:inherit;" name="deb">Debian / Ubuntu / Linux Mint</a></h2>
-                                    <div>Download one of the following packages based on your system architecture:</div>
-                                    <ul style="margin:.5em 0 1em 2em;">
-                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_amd64.deb" title="Emby Theater for X64">X64</a></li>
-                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_arm64.deb" title="Emby Theater for Arm64 (aarch64)">Arm64 (aarch64)</a></li>
-                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-deb_3.0.15_armhf.deb" title="Emby Theater for Armv7 (armhf)">Armv7 (armhf)</a></li>
-                                    </ul>
-                                    <div>Install Steps</div>
-                                    <div><code>sudo apt-get update</code></div>
-                                    <div><code>sudo apt-get install cec-utils libasound2 libatomic1 libc6 libegl1 libgcc-s1 libpulse0 libstdc++6</code></div>
-                                    <div><code>sudo dpkg -i /path/to/deb</code></div>
                                 </div>
                             </div>
                         </div>
