--- a/src/emby-theater-linux.html
+++ b/src/emby-theater-linux.html
@@ -429,15 +429,19 @@
                                     <div style="margin-bottom:2em;">
                                         <h2>Installation</h2>
                                         <ul style="margin:.5em 0 1em 2em;">
+                                            <li><a href="#centos">CentOS</a></li>
                                             <li><a href="#deb">Debian</a></li>
+                                            <li><a href="#fedora">Fedora</a></li>
                                             <li><a href="#flatpak">Flatpak</a></li>
                                             <li><a href="#deb">Linux Mint</a></li>
+                                            <li><a href="#opensuse">OpenSuse</a></li>
+                                            <li><a href="emby-theater-rpi.html">Raspberry Pi</a></li>
                                             <li><a href="#snap">Snap</a></li>
                                             <li><a href="#deb">Ubuntu</a></li>
                                         </ul>
                                     </div>
 
-                                    <div style="margin-bottom:3em;">
+                                    <div style="margin-bottom:2.5em;">
                                         <h2><a style="color:inherit;" name="deb">Debian / Ubuntu / Linux Mint</a></h2>
                                         <div>Download one of the following packages based on your system architecture:</div>
                                         <ul style="margin:.5em 0 1em 2em;">
@@ -449,11 +453,32 @@
                                         <div><code>sudo apt-get update</code></div>
                                         <div><code>sudo apt-get install cec-utils libasound2 libatomic1 libc6 libegl1 libgcc-s1 libpulse0 libstdc++6</code></div>
                                         <div><code>sudo dpkg -i /path/to/deb</code></div>
-                                        <div style="margin-top:1em;">Run Emby Theater</div>
-                                        <div><code>emby-theater</code></div>
+                                        <div style="margin-top:1em;">Run Emby Theater by launching from your desktop applications list.</div>
                                     </div>
 
-                                    <div style="margin-bottom:3em;">
+                                    <div style="margin-bottom:2.5em;">
+                                        <h2><a style="color:inherit;" name="centos">CentOS</a></h2>
+                                        <div>Install one of the following based on your system architecture:</div>
+                                        <ul style="margin:.5em 0 1em 1em;">
+                                            <li>X64: <code>yum install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_x86_64.rpm</code></li>
+                                            <li>Arm64 (aarch64): <code>yum install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_aarch64.rpm</code></li>
+                                            <li>Armv7hl: <code>yum install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_armv7hl.rpm</code></li>
+                                        </ul>
+                                        <div style="margin-top:1em;">Run Emby Theater by launching from your desktop applications list.</div>
+                                    </div>
+
+                                    <div style="margin-bottom:2.5em;">
+                                        <h2><a style="color:inherit;" name="fedora">Fedora</a></h2>
+                                        <div>Install one of the following based on your system architecture:</div>
+                                        <ul style="margin:.5em 0 1em 1em;">
+                                            <li>X64: <code>dnf install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_x86_64.rpm</code></li>
+                                            <li>Arm64 (aarch64): <code>dnf install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_aarch64.rpm</code></li>
+                                            <li>Armv7hl: <code>dnf install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_armv7hl.rpm</code></li>
+                                        </ul>
+                                        <div style="margin-top:1em;">Run Emby Theater by launching from your desktop applications list.</div>
+                                    </div>
+
+                                    <div style="margin-bottom:2.5em;">
                                         <h2><a style="color:inherit;" name="flatpak">Flatpak</a></h2>
                                         <div>Download one of the following packages based on your system architecture:</div>
                                         <ul style="margin:.5em 0 1em 2em;">
@@ -463,7 +488,18 @@
                                         <div>Install Steps</div>
                                     </div>
 
-                                    <div style="margin-bottom:3em;">
+                                    <div style="margin-bottom:2.5em;">
+                                        <h2><a style="color:inherit;" name="opensuse">OpenSuse</a></h2>
+                                        <div>Install one of the following based on your system architecture:</div>
+                                        <ul style="margin:.5em 0 1em 1em;">
+                                            <li>X64: <code>zypper install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_x86_64.rpm</code></li>
+                                            <li>Arm64 (aarch64): <code>zypper install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_aarch64.rpm</code></li>
+                                            <li>Armv7hl: <code>zypper install https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpm_3.0.15_armv7hl.rpm</code></li>
+                                        </ul>
+                                        <div style="margin-top:1em;">Run Emby Theater by launching from your desktop applications list.</div>
+                                    </div>
+
+                                    <div style="margin-bottom:2.5em;">
                                         <h2><a style="color:inherit;" name="snap">Snap</a></h2>
                                         <div>Download one of the following packages based on your system architecture:</div>
                                         <ul style="margin:.5em 0 1em 2em;">
